--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <h3 class="card-title">${cardData[i].title}</h3>
                     <p class="card-description">${cardData[i].description}</p>
                     <a href="${cardNumber}.html" class="btn">
-                        <i class="fas fa-external-link-alt"></i> View Page ${cardNumber}
+                        <i class="fas fa-external-link-alt"></i> Play now! 
                     </a>
                 </div>
             `;
